# github-actions-generator

./: .gitignore  DISTRIBUTION_GUIDE.md  FINAL_VALIDATION.md  GITHUB_VALIDATION_GUIDE.md  LICENSE  MANIFEST.in  PROJECT_SUMMARY.md  README.md  VALIDATION_REPORT.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: ci.yml
gha_generator/: __init__.py  generator.py  main.py  utils.py
gha_generator/templates/: __init__.py  base.yml  data-science.yml  django-api.yml  laravel-api.yml  react-app.yml
tests/: __init__.py  test_cli.py  test_generator.py  test_integration.py  test_utils.py
